--- a/resume2.HTML
+++ b/resume2.HTML
@@ -1,138 +1,195 @@
 <body class="body">
-  <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" data-ix="new-interaction">
-    <div class="nav-full-wrapper-width">
-      <a class="brand w-nav-brand" href="#">
-        <h1 class="name-brand">J.D. TALAMAYAN</h1>
+  <div class="desktop w-hidden-medium w-hidden-small w-hidden-tiny">
+    <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" data-ix="initial-display-none">
+      <div class="nav-full-wrapper-width">
+        <a class="brand w-nav-brand" href="/home">
+          <h1 class="name-brand">J.D. TALAMAYAN</h1>
+        </a>
+        <div class="nav-container-height w-container">
+          <nav class="nav-menu-links-margin w-nav-menu" role="navigation"><a class="nav-link-styles w-nav-link" href="/home">About</a><a class="nav-link-styles w-nav-link" href="#">Portfolio</a><a class="nav-link-styles w-nav-link" href="#">Contact</a></nav>
+          <div class="w-nav-button">
+            <div class="w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="resume-page" data-ix="resume-page-interaction">
+      <div class="section1">
+        <h1 class="name" data-ix="navbar-appear">J.D. TALAMAYAN</h1>
+        <h1 class="title">UI/UX Web Design Developer</h1>
+        <div class="toolset-wrapper">
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="70" src="images/HTML5-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">HTML</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="70" src="images/CSS-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">CSS</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="70" src="images/JavaScript-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">JavaScript</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="60" src="images/Chrome-Icon.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Chrome</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="56" src="images/bootstrap-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Bootstrap</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="img-styles-sketch" height="61" src="images/Sketch-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Sketch</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="56" src="images/Webflow-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Webflow</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="57" src="images/Photoshop-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Photoshop</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img class="image-styles-1" height="56" src="images/Adobe-llustrator-icon-244px.png"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Illustrator</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="profile-section">
+        <div class="profile">
+          <h1 class="section-heading">PROFILE</h1>
+        </div>
+        <div class="profile-text-wrapper">
+          <p class="profile-text">Highly-proficient UI/UX artist with an expert-level command of HTML, CSS, and JavaScript. I can design attractive, user-friendly interfaces for mobile, tablet &amp; desktop screens with Sketch &amp; Photoshop and rapidly convert them into interactive prototypes using clean, semantic, maintainable code. I am masterful with technologies like Bootstrap &amp; Flexbox and able to quickly craft websites and web applications optimized to display on any device. Some of my strengths include Rapid Prototyping, CSS, RWD, and IxD.</p>
+        </div>
+      </div>
+      <div class="skills-section">
+        <h1 class="section-heading">SKILLS</h1>
+        <div class="_3-column">
+          <div class="col-1">
+            <p class="column-text">Rapid Web Prototyping<br>Front-End Web Development<br>Responsive Web Design<br>Mobile-First Strategy<br>Interaction Design</p>
+          </div>
+          <div class="col-2">
+            <p class="column-text">UI/UX Web Design<br>Mobile Interface Design<br>Iterative Prototyping<br>Content Strategy<br>Research</p>
+          </div>
+          <div class="col-3">
+            <p class="column-text">JavaScript/CSS Animations<br>Search Engine Optimization<br>Information Architecture<br>Digital Marketing<br>Branding</p>
+          </div>
+        </div>
+      </div>
+      <div class="edu-section">
+        <h1 class="section-heading">EDUCATION</h1>
+        <div class="_3-column">
+          <div class="col-1">
+            <p class="column-text"><strong>Valedictorian</strong>, GPA: 4.7<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270<br>Phone Number: (360) 965-2300</p>
+          </div>
+          <div class="col-2">
+            <p class="column-text"><strong>Associate of Arts &amp; Sciences</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201<br>Phone Number: (425) 388-9100</p>
+          </div>
+          <div class="col-3">
+            <p class="column-text"><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>101 W. Broadway, San Diego, CA 92101<br>Phone Number: (858) 633-7385</p>
+          </div>
+        </div>
+      </div>
+      <div class="experience-section">
+        <h1 class="section-heading">EXPERIENCE</h1>
+        <div class="exp-1">
+          <div class="seismic-img-wrapper"><img class="seismic-logo" data-ix="tooltip-interaction" height="30" src="images/Seismic-Logo.png"></div>
+          <div class="seismic-title-wrapper">
+            <h2 class="bold">Software Engineer Intern</h2>
+          </div>
+          <div class="seismic-dates-wrapper">
+            <h2 class="bold">June 1st, 2017 - November 17th, 2017</h2>
+          </div>
+        </div>
+        <div class="seismic-description-wrapper">
+          <p class="seismic-paragraph">Headquartered in San Diego, California, Seismic Software Inc. is the world’s leading sales enablement solution. At Seismic, I observed the relationship between design and engineering teams, learned new technologies, and contributed over 5,000 lines of HTML, CSS, and JavaScript to the Seismic Community website, resulting in a successful project launch. Some of the technologies I learned about include: SCSS, Jira, Lithium, React and SQL. Etc. etc. etc. filler text.</p>
+          <div class="website-text-block">Reference: Melissa VanPelt - Phone Number - etc. etc. etc. etc.</div>
+        </div>
+      </div>
+      <div class="contact-section">
+        <h1 class="section-heading">CONTACT</h1>
+        <div class="_3-column">
+          <div class="col-1">
+            <p class="column-text">Call or Text: (925) 337-6466</p>
+          </div>
+          <div class="col-2">
+            <p class="column-text-center">www.john-divino.com</p>
+          </div>
+          <div class="col-3">
+            <p class="column-text-right">j.d.talamayan@gmail.com</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-space"></div>
+  </div>
+  <div class="mobile w-hidden-main">
+    <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" data-ix="initial-display-none">
+      <div class="nav-full-wrapper-width">
+        <a class="brand w-nav-brand" href="/home">
+          <h1 class="name-brand">J.D. TALAMAYAN</h1>
+        </a>
+        <div class="nav-container-height w-container">
+          <nav class="nav-menu-links-margin w-nav-menu" role="navigation">
+            <div class="div-block-33"><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix" href="/home">About</a><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix" href="/portfolio">Portfolio</a><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix">Contact</a></div>
+            <div class="div-block-36"><a class="link" href="/home">www.John-Divino.com</a></div>
+          </nav>
+          <div class="menu-button w-nav-button">
+            <div class="icon-2 w-icon-nav-menu"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="div-block-24">
+      <div class="div-block-27">
+        <h1 class="heading-10" data-ix="navbar-appear">J.D. TALAMAYAN</h1>
+        <h2 class="heading-10-copy">UI/UX WEB DESIGN DEVELOPER</h2>
+      </div>
+    </div>
+    <div class="profile-container">
+      <div class="div-block-29">
+        <p class="paragraph">Highly-proficient UI/UX artist with an expert-level command of HTML, CSS, and JavaScript. I can design attractive, user-friendly interfaces for mobile, tablet &amp; desktop screens with Sketch &amp; Photoshop and rapidly convert them into interactive prototypes using clean, semantic, maintainable code. I am masterful with technologies like Bootstrap &amp; Flexbox and able to quickly craft websites and web applications optimized to display on any device. Some of my strengths include Rapid Prototyping, CSS, RWD, and IxD.</p>
+      </div>
+    </div>
+    <div>
+      <a class="link-block-3 w-inline-block" id="Skills">
+        <h1 class="heading-9" data-ix="paragraph-show-skills">Skills</h1>
       </a>
-      <div class="nav-container-height w-container">
-        <nav class="nav-menu-links-margin w-nav-menu" role="navigation"><a class="nav-link-styles w-nav-link" href="#about">About</a><a class="nav-link-styles w-nav-link" href="#">Portfolio</a><a class="nav-link-styles w-nav-link" href="#">Contact</a></nav>
-        <div class="w-nav-button">
-          <div class="w-icon-nav-menu"></div>
-        </div>
+      <div class="div-block-skills">
+        <p class="skills-paragraph" data-ix="paragraph-initial">Rapid Web Prototyping, Front-End Web Development, Responsive Web Design, Mobile-First Strategy, Interaction Design, UI/UX Web Design, Mobile Interface Design, Iterative Prototyping, Content Strategy, Research, JavaScript/CSS Animations, Search Engine Optimization, Information Architecture, Digital Marketing, Branding &amp; More!</p>
+        <p class="space w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny" data-ix="paragraph-initial" id="Edu"></p>
       </div>
     </div>
+    <div class="div-block-31">
+      <a class="link-block-4 w-inline-block" href="#Edu">
+        <h1 class="heading-edu" data-ix="paragraph-show-edu">Education</h1>
+      </a>
+      <div class="div-block-edu">
+        <p class="edu-paragraph" data-ix="paragraph-initial"><strong>Valedictorian</strong>, GPA: 4.7<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270<br>Phone Number: (360) 965-2300<br><br><strong>Associate of Arts &amp; Sciences</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201<br>Phone Number: (425) 388-9100<br><br><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>101 W. Broadway, San Diego, CA 92101<br>Phone Number: (858) 633-7385</p>
+      </div>
+      <h1 class="heading-9-copy">Experience</h1>
+      <h1 class="heading-contact">Contact</h1>
+    </div>
+    <div class="div-block-32"><a href="#">View Resume PDF</a></div>
   </div>
-  <div class="resume-page" data-ix="new-interaction-2">
-    <div class="section1">
-      <h1 class="name" data-ix="navbar-appear">J.D. TALAMAYAN</h1>
-      <h1 class="title">UI/UX Web Design Engineer</h1>
-      <div class="toolset-wrapper">
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="70" src="images/HTML5-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">HTML</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="70" src="images/CSS-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">CSS</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="70" src="images/JavaScript-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">JavaScript</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="60" src="images/Chrome-Icon.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">Chrome</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="img-styles-sketch" height="61" src="images/Sketch-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">Sketch</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="56" src="images/Webflow-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">Webflow</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="57" src="images/Photoshop-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">Photoshop</div>
-          </div>
-        </div>
-        <div class="tool-wrapper">
-          <div class="tool-img"><img class="image-styles-1" height="56" src="images/Adobe-llustrator-icon-244px.png"></div>
-          <div class="tool-name-wrapper">
-            <div class="tool-name-text">Illustrator</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="profile-section">
-      <div class="profile">
-        <h1 class="section-heading">PROFILE</h1>
-      </div>
-      <div class="profile-text-wrapper">
-        <p class="profile-text">Highly-proficient UI/UX artist with an expert-level command of HTML, CSS, and JavaScript. I can design attractive, user-friendly interfaces for mobile, tablet &amp; desktop screens with Sketch &amp; Photoshop and rapidly convert them into interactive prototypes using clean, semantic, maintainable code. I am masterful with technologies like Bootstrap &amp; Flexbox and able to quickly craft websites and web applications optimized to display on any device. One of my strengths is Responsive Web Design.</p>
-      </div>
-    </div>
-    <div class="skills-section">
-      <h1 class="section-heading">SKILLS</h1>
-      <div class="_3-column">
-        <div class="col-1">
-          <p class="column-text">Rapid Prototyping<br>Front-End Web Development<br>Responsive Web Design<br>Mobile-First Strategy<br>Interaction Design</p>
-        </div>
-        <div class="col-2">
-          <p class="column-text">UI/UX Design<br>Interactive Prototyping<br>JavaScript/CSS Animations<br>Content Strategy<br>Research</p>
-        </div>
-        <div class="col-3">
-          <p class="column-text">Branding<br>Digital Marketing<br>Information Architecture<br>Search Engine Optimization<br>Mobile Interface Design</p>
-        </div>
-      </div>
-    </div>
-    <div class="edu-section">
-      <h1 class="section-heading">EDUCATION</h1>
-      <div class="_3-column">
-        <div class="col-1">
-          <p class="column-text"><strong>Valedictorian</strong>, GPA: 4.7<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270<br>Phone Number: (360) 965-2300</p>
-        </div>
-        <div class="col-2">
-          <p class="column-text"><strong>Associate of Arts &amp; Sciences</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201<br>Phone Number: (425) 388-9100</p>
-        </div>
-        <div class="col-3">
-          <p class="column-text"><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>101 W. Broadway, San Diego, CA 92101<br>Phone Number: (858) 633-7385</p>
-        </div>
-      </div>
-    </div>
-    <div class="experience-section">
-      <h1 class="section-heading">EXPERIENCE</h1>
-      <div class="exp-1">
-        <div class="seismic-img-wrapper"><img class="seismic-logo" data-ix="tooltip-interaction" height="30" src="images/Seismic-Logo.png"></div>
-        <div class="seismic-title-wrapper">
-          <h2 class="bold">Software Engineer Intern</h2>
-        </div>
-        <div class="seismic-dates-wrapper">
-          <h2 class="bold">June 1st, 2017 - November 17th, 2017</h2>
-        </div>
-      </div>
-      <div class="seismic-description-wrapper">
-        <p class="seismic-paragraph">Seismic Software Inc. is the leading sales enablement solution that allows sales teams to deliver the right content at the right time on any device. Seismic's mobile-first, cloud-based platform enables field and inside sales reps to quickly create customized, compliant materials that dramatically increase time spent selling, improve win rates, reduce sales cycles and increase customer satisfaction. Some of Seismic's successful customers include: HPE, Bank of America, Capital One, Classy and Getty Images.</p>
-        <div class="website-text-block">For more information&nbsp;visit: www.seismic.com</div>
-      </div>
-    </div>
-    <div class="contact-section">
-      <h1 class="section-heading">CONTACT</h1>
-      <div class="_3-column">
-        <div class="col-1">
-          <p class="column-text">Call or Text: (925) 337-6466</p>
-        </div>
-        <div class="col-2">
-          <p class="column-text-center">www.john-divino.com</p>
-        </div>
-        <div class="col-3">
-          <p class="column-text-right">j.d.talamayan@gmail.com</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="bottom-space"></div>
 </body>
