--- a/resume2.HTML
+++ b/resume2.HTML
@@ -1,73 +1,76 @@
 <body class="body">
-  <div class="desktop w-hidden-medium w-hidden-small w-hidden-tiny">
-    <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" data-ix="initial-display-none">
-      <div class="nav-full-wrapper-width">
-        <a class="brand w-nav-brand" href="/home">
-          <h1 class="name-brand">J.D. TALAMAYAN</h1>
-        </a>
-        <div class="nav-container-height w-container">
-          <nav class="nav-menu-links-margin w-nav-menu" role="navigation"><a class="nav-link-styles w-nav-link" href="/home">About</a><a class="nav-link-styles w-nav-link" href="#">Portfolio</a><a class="nav-link-styles w-nav-link" href="#">Contact</a></nav>
-          <div class="w-nav-button">
-            <div class="w-icon-nav-menu"></div>
-          </div>
-        </div>
-      </div>
+  <div class="portfolio-desktop-nav w-hidden-small w-hidden-tiny">
+    <a href="/home-2" class="brand w-nav-brand">
+      <h1 class="name-brand">J.D. TALAMAYAN</h1>
+    </a>
+    <div class="div-block-23">
+      <a href="home.html" class="link-block-2 w-inline-block">
+        <div class="text-block-3">About</div>
+      </a>
+      <a href="index.html" class="link-block-2 w-inline-block">
+        <div class="text-block-3">Resume</div>
+      </a>
+      <a href="home.html" class="link-block-2 w-inline-block">
+        <div class="text-block-3">Contact</div>
+      </a>
     </div>
-    <div class="resume-page" data-ix="resume-page-interaction">
+  </div>
+  <div class="desktop w-hidden-medium w-hidden-small w-hidden-tiny">
+    <div data-ix="resume-page-interaction" class="resume-page">
       <div class="section1">
-        <h1 class="name" data-ix="navbar-appear">J.D. TALAMAYAN</h1>
+        <h1 class="name">J.D. TALAMAYAN</h1>
         <h1 class="title">UI/UX Web Design Developer</h1>
         <div class="toolset-wrapper">
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="70" src="images/HTML5-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/HTML5-icon-244px.png" height="70" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">HTML</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="70" src="images/CSS-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/CSS-icon-244px.png" height="70" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">CSS</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="70" src="images/JavaScript-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/JavaScript-icon-244px.png" height="70" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">JavaScript</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="60" src="images/Chrome-Icon.png"></div>
+            <div class="tool-img"><img src="images/wordpress-logo.png" height="60" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
-              <div class="tool-name-text">Chrome</div>
+              <div class="tool-name-text">WordPress</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="56" src="images/bootstrap-icon-244px.png"></div>
-            <div class="tool-name-wrapper">
-              <div class="tool-name-text">Bootstrap</div>
-            </div>
-          </div>
-          <div class="tool-wrapper">
-            <div class="tool-img"><img class="img-styles-sketch" height="61" src="images/Sketch-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/Sketch-icon-244px.png" height="61" class="img-styles-sketch"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">Sketch</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="56" src="images/Webflow-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/bootstrap-icon-244px.png" height="56" class="image-styles-1"></div>
+            <div class="tool-name-wrapper">
+              <div class="tool-name-text">Bootstrap</div>
+            </div>
+          </div>
+          <div class="tool-wrapper">
+            <div class="tool-img"><img src="images/Webflow-icon-244px.png" height="56" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">Webflow</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="57" src="images/Photoshop-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/Photoshop-icon-244px.png" height="57" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">Photoshop</div>
             </div>
           </div>
           <div class="tool-wrapper">
-            <div class="tool-img"><img class="image-styles-1" height="56" src="images/Adobe-llustrator-icon-244px.png"></div>
+            <div class="tool-img"><img src="images/Adobe-llustrator-icon-244px.png" height="56" class="image-styles-1"></div>
             <div class="tool-name-wrapper">
               <div class="tool-name-text">Illustrator</div>
             </div>
@@ -100,35 +103,36 @@
         <h1 class="section-heading">EDUCATION</h1>
         <div class="_3-column">
           <div class="col-1">
-            <p class="column-text"><strong>Valedictorian</strong>, GPA: 4.7<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270<br>Phone Number: (360) 965-2300</p>
+            <p class="column-text"><strong>High School Diploma</strong>, GPA: 4.0<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270</p>
           </div>
           <div class="col-2">
-            <p class="column-text"><strong>Associate of Arts &amp; Sciences</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201<br>Phone Number: (425) 388-9100</p>
+            <p class="column-text"><strong>Associate of Arts &amp; Sciences Degree</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201</p>
           </div>
           <div class="col-3">
-            <p class="column-text"><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>101 W. Broadway, San Diego, CA 92101<br>Phone Number: (858) 633-7385</p>
+            <p class="column-text"><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>350 10th Avenue, San Diego, CA 92101</p>
           </div>
         </div>
       </div>
-      <div class="experience-section">
-        <h1 class="section-heading">EXPERIENCE</h1>
-        <div class="exp-1">
-          <div class="seismic-img-wrapper"><img class="seismic-logo" data-ix="tooltip-interaction" height="30" src="images/Seismic-Logo.png"></div>
-          <div class="seismic-title-wrapper">
-            <h2 class="bold">Software Engineer Intern</h2>
+      <div class="comp-section">
+        <h1 class="section-heading">COMPETENCE</h1>
+        <div class="comp-1">
+          <div class="comp-wrapper-1">
+            <h2 class="skill">HTML &amp; CSS</h2>
+            <h2 class="skill">JavaScript &amp; jQuery</h2>
+            <h2 class="skill">Responsive Web Design</h2>
+            <h2 class="skill">User Interface Design</h2>
           </div>
-          <div class="seismic-dates-wrapper">
-            <h2 class="bold">June 1st, 2017 - November 17th, 2017</h2>
+          <div class="comp-wrapper">
+            <h2 class="skill">WordPress &amp; PHP</h2>
+            <h2 class="skill">Sketch/Photoshop</h2>
+            <h2 class="skill">Interaction Design</h2>
+            <h2 class="skill">Rapid Prototyping</h2>
           </div>
-        </div>
-        <div class="seismic-description-wrapper">
-          <p class="seismic-paragraph">Headquartered in San Diego, California, Seismic Software Inc. is the world’s leading sales enablement solution. At Seismic, I observed the relationship between design and engineering teams, learned new technologies, and contributed over 5,000 lines of HTML, CSS, and JavaScript to the Seismic Community website, resulting in a successful project launch. Some of the technologies I learned about include: SCSS, Jira, Lithium, React and SQL. Etc. etc. etc. filler text.</p>
-          <div class="website-text-block">Reference: Melissa VanPelt - Phone Number - etc. etc. etc. etc.</div>
         </div>
       </div>
       <div class="contact-section">
         <h1 class="section-heading">CONTACT</h1>
-        <div class="_3-column">
+        <div class="_3-column-contact">
           <div class="col-1">
             <p class="column-text">Call or Text: (925) 337-6466</p>
           </div>
@@ -144,22 +148,6 @@
     <div class="bottom-space"></div>
   </div>
   <div class="mobile w-hidden-main">
-    <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-duration="400" data-ix="initial-display-none">
-      <div class="nav-full-wrapper-width">
-        <a class="brand w-nav-brand" href="/home">
-          <h1 class="name-brand">J.D. TALAMAYAN</h1>
-        </a>
-        <div class="nav-container-height w-container">
-          <nav class="nav-menu-links-margin w-nav-menu" role="navigation">
-            <div class="div-block-33"><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix" href="/home">About</a><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix" href="/portfolio">Portfolio</a><a class="nav-link-styles w-nav-link" data-ix="nav-links-ix">Contact</a></div>
-            <div class="div-block-36"><a class="link" href="/home">www.John-Divino.com</a></div>
-          </nav>
-          <div class="menu-button w-nav-button">
-            <div class="icon-2 w-icon-nav-menu"></div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="div-block-24">
       <div class="div-block-27">
         <h1 class="heading-10" data-ix="navbar-appear">J.D. TALAMAYAN</h1>
@@ -172,24 +160,62 @@
       </div>
     </div>
     <div>
-      <a class="link-block-3 w-inline-block" id="Skills">
+      <a id="Skills" class="link-block-3 w-inline-block">
         <h1 class="heading-9" data-ix="paragraph-show-skills">Skills</h1>
       </a>
       <div class="div-block-skills">
         <p class="skills-paragraph" data-ix="paragraph-initial">Rapid Web Prototyping, Front-End Web Development, Responsive Web Design, Mobile-First Strategy, Interaction Design, UI/UX Web Design, Mobile Interface Design, Iterative Prototyping, Content Strategy, Research, JavaScript/CSS Animations, Search Engine Optimization, Information Architecture, Digital Marketing, Branding &amp; More!</p>
-        <p class="space w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny" data-ix="paragraph-initial" id="Edu"></p>
+        <p id="Edu" class="space w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny" data-ix="paragraph-initial"></p>
       </div>
     </div>
     <div class="div-block-31">
-      <a class="link-block-4 w-inline-block" href="#Edu">
+      <a href="#Edu" class="link-block-4 w-inline-block">
         <h1 class="heading-edu" data-ix="paragraph-show-edu">Education</h1>
       </a>
       <div class="div-block-edu">
         <p class="edu-paragraph" data-ix="paragraph-initial"><strong>Valedictorian</strong>, GPA: 4.7<br>Academy of Construction &amp; Engineering<br>ACE High School Class of 2012<br>8301 84th St NE, Marysville, WA 98270<br>Phone Number: (360) 965-2300<br><br><strong>Associate of Arts &amp; Sciences</strong><br>Running Start High School Graduate<br>Everett Community College 2012<br>2000 Tower Street, Everett, WA 98201<br>Phone Number: (425) 388-9100<br><br><strong>Origin Code Academy</strong><br>Full-Stack Web Development<br>12-week Code Bootcamp 2016<br>101 W. Broadway, San Diego, CA 92101<br>Phone Number: (858) 633-7385</p>
       </div>
-      <h1 class="heading-9-copy">Experience</h1>
-      <h1 class="heading-contact">Contact</h1>
+      <h1 class="heading-9-copy" data-ix="paragraph-show-exp">Experience</h1>
+      <p class="exp-paragraph" data-ix="paragraph-initial"><strong>Software Engineering Intern</strong><br><em>Seismic Software Inc. (June 2017 - November 2017)</em><br><br>Headquartered in San Diego, California, Seismic Software Inc. is the world’s leading sales enablement solution. At Seismic, I observed the relationship between design, marketing and engineering teams and contributed over 5,000 lines of HTML, CSS, and JavaScript to the Seismic Community website. Some of the technologies I used and learned about include: SCSS, Jira, Lithium, React, Angular and SQL.</p>
+      <h1 class="heading-contact" data-ix="paragraph-show-contact">Contact</h1>
+      <div class="contact-text" data-ix="paragraph-initial">Call or Text: 925-337-6466<br>j.d.talamayan@gmail.com<br>www.john-divino.com</div>
     </div>
-    <div class="div-block-32"><a href="#">View Resume PDF</a></div>
+    <div class="div-block-32"><a href="#" class="link-2">View PDF Version</a></div>
+    <a href="portfolio.html" class="link-block-9 w-inline-block">
+      <h1 class="view-portfolio-cta">Portfolio</h1>
+    </a>
+  </div>
+  <div class="nav-menu-mobile w-hidden-main w-hidden-medium">
+    <div class="nav-mobile-close w-hidden-main">
+      <div class="div-block-37"><a href="#" class="w-inline-block" data-ix="navbar-mobile-appear"><img src="images/Hamburger-Menu-Black.svg" class="image-7"></a></div>
+    </div>
+    <div class="nav-bg-100vh" data-ix="initial-display-none">
+      <div><a href="#" class="link-block-7 w-inline-block" data-ix="nav-mobile-close"><img src="images/x-white-squared-close-icon.svg" class="image-9"></a></div>
+      <div class="div-block-40" data-ix="navbar-mobile-appear-2">
+        <div class="div-block-42">
+          <a href="home.html" class="link-block-8 w-inline-block">
+            <h1 class="heading-12">J.D. TALAMAYAN</h1>
+          </a>
+        </div>
+        <div class="div-block-41">
+          <div class="div-block-39">
+            <a href="home.html" class="link-block-6 w-inline-block">
+              <h3 class="heading-11">About</h3>
+            </a>
+          </div>
+          <div class="div-block-39">
+            <a href="index.html" class="link-block-6 w-inline-block">
+              <h3 class="heading-11">Resume</h3>
+            </a>
+          </div>
+          <div class="div-block-39">
+            <a class="link-block-6 w-inline-block">
+              <h3 class="heading-11">Contact</h3>
+            </a>
+          </div>
+        </div>
+        <div class="div-block-36"><a href="home.html" class="link">www.John-Divino.com</a></div>
+      </div>
+    </div>
   </div>
 </body>
